--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'NK'
 - !lcc 'HD'
 - !lcsh 'Porcelain industry -- Portugal -- History'
+- GITenberg
 title: 'A Vista Alegre: apontamentos para a sua historia'
 url: http://www.gutenberg.org/ebooks/34276
